# shikimori-rust

./: Cargo.toml  README.md  build.rs  schema.graphql
.github/workflows/: main.yml
src/: client.rs  error.rs  lib.rs  types.rs  utils.rs
src/graphql/: anime.rs  contest.rs  external_link.rs  genre.rs  manga.rs  mod.rs  scalars.rs  types.rs  user_rates.rs
src/v1/: manga.rs  mod.rs  types.rs
src/v1/characters/: types.rs
src/v1/genres/: types.rs
src/v1/manga/: get.rs  list.rs  roles.rs  types.rs
src/v1/people/: types.rs
src/v1/studios/: types.rs
src/v2/: mod.rs
src/v2/user_rates/: types.rs
