[package]
name = "shikimori"
version = "0.1.1"
edition = "2021"
description = "An unofficial async Rust library that allows you to interact with the Shikimori API"
authors = ["Negezor <negezor@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/negezor/shikimori-rust"
keywords = ["shikimori", "api", "sdk", "wrapper", "async"]
categories = ["api-bindings"]

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
comma_serde_urlencoded = { version = "0.8" }
thiserror = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.4" }
serde_json = { version = "1.0" }
futures = { version = "0.3", default-features = false, features = ["std"] }
async-fn-stream = { version = "0.2" }
# time = { version = "0.3", features = ["serde-human-readable"] }
tower = { version = "0.4", features = ["limit", "buffer", "util"] }
cynic = { version = "3.2" }

[dev-dependencies]
tokio = { version = "1.33", features = [
    "macros",
    "rt-multi-thread"
] }

[build-dependencies]
cynic-codegen = { version = "3.2" }
