[package]
name = "shikimori"
version = "0.4.5"
edition = "2024"
description = "An unofficial async Rust library that allows you to interact with the Shikimori API"
authors = ["Negezor <negezor@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/negezor/shikimori-rust"
keywords = ["shikimori", "api", "sdk", "wrapper", "async"]
categories = ["api-bindings"]
rust-version = "1.87"

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]
register-graphql-schema = ["dep:cynic-codegen"]

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
comma_serde_urlencoded = { version = "0.8" }
thiserror = { version = "2.0" }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
url = { version = "2.5" }
serde_json = { version = "1.0" }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
async-fn-stream = { version = "0.3" }
# time = { version = "0.3", features = ["serde-human-readable"] }
tower = { version = "=0.4", features = ["limit", "buffer", "util"] }
cynic = { version = "3.13" }
cynic-codegen = { version = "3.13", optional = true }

[dev-dependencies]
tokio = { version = "1.52", features = [
    "macros",
    "rt-multi-thread"
] }

[build-dependencies]
cynic-codegen = { version = "3.13" }
